syntax = "proto3";

option csharp_namespace = "Discount.Grpc";

package DiscountGrpc;

message GetDiscountRequest {
  string product_name = 1;
}

message Coupon {
  int32 id = 1;
  string product_name = 2;
  string description = 3;
  int32 amount = 4;
}

message CreateDiscountRequest {
  string product_name = 2;
  string description = 3;
  int32 amount = 4;
}

message UpdateDiscountResponse {
  bool result = 1;
}

message DeleteDiscountRequest {
  string product_name = 1;
}

message DeleteDiscountResponse {
  bool result = 1;
}

service DiscountService {
  rpc GetDiscount (GetDiscountRequest) returns (Coupon);
  rpc CreateDiscount (CreateDiscountRequest) returns (Coupon);
  rpc UpdateDiscount (Coupon) returns (UpdateDiscountResponse);
  rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}